ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustam-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: "/[\\w\\-/]+/health"
            pathType: ImplementationSpecific
            backend:
              service:
                name: rustam-service
                port:
                  number: 8000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: rustam-service
                port:
                  number: 8000
  ingressClassName: nginx
